--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,15 @@
 #root {
   height: 100vh;
+  /* max-height: 100vh; */
   width: 100%;
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
   position: relative;
 }
 
-.full1px{
-  height: calc(100% + 1px);
-  margin-top: -1px;
-}
-
 .scroll-container{
-  overflow: scroll;
+  overflow-x: scroll;
 }
 
 
