--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 }
 body{
   height: 100vh;
+  /* min-height: 100vh; */
   font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
@@ -55,7 +56,7 @@ input[type="checkbox"]::before {
 }
 
 input[type="checkbox"]::after {
-  background: url("./assets/icon-check.svg") no-repeat center;
+  background: url("https://dullahan83.github.io/FEM-Kanban/assets/icon-check.svg") no-repeat center;
 }
 
 input[type="checkbox"]:checked::before,
